one round of edits

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -19,7 +19,7 @@ A website administrator can add a mining script to her webpage, with or without 
 
 \subsection{Mixed content} 
 
-Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network or tools for tracing users of their site. Third parties with these privileges can inject cryptojacking scripts into the sites that use them. For example, Showtime claims this is how CoinHive was deployed within their site~\cite{showtimehive}. In two separate incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America.\url{http://globovision.com/}} using Google Tag Manager.\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites} Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}.
+Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network or tools for tracing users of their site. Third parties with these privileges can inject cryptojacking scripts into the sites that use them. For example, Showtime claims this is how Coinhive was deployed within their site~\cite{showtimehive}. In two separate incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America.\url{http://globovision.com/}} using Google Tag Manager.\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites} Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}.
 
 \subsection{Browser extensions} 
 
@@ -27,7 +27,7 @@ Cryptojacking was not limited to websites in 2017. The chrome extension Archive 
 
 \subsection{Breaches} 
 
-If an attackers is able to breach principle servers, websites, extensions, or the scripting services they use, they can inject cryptojacking scripts that will impact the site's users without the site's knowledge or consent. For example, a researcher found a malicious modification to webchat system LiveHelpNow's SDK; it resulted in unsolicited mining across all websites using their char support service~\cite{chatsupporthack}. In another example, Coinhive was found on the political fact-checking website Politifact.\footnote{PolitiFact: Fact-checking US politics.\url{https://politifact.com/}} A compromised JavaScript library was found to be injecting the cryptojacking scripts. The malicious code remained on the site for at least four hours before it was removed~\cite{politifactcoinhive}. PolitiFact Executive Director stated ``Hackers were able to install their script on the fact-checking website after discovering a misconfigured cloud-computing server''~\cite{politifactcoinhivewsj}.
+If an attackers is able to breach principle servers, websites, extensions, or the scripting services they use, they can inject cryptojacking scripts that will impact the site's users without the site's knowledge or consent. For example, a researcher found a malicious modification to webchat system LiveHelpNow's SDK; it resulted in unsolicited mining across all websites using their char support service~\cite{chatsupporthack}. In another example, Coinhive was found on the political fact-checking website PolitiFact.\footnote{PolitiFact: Fact-checking US politics.\url{https://politifact.com/}} A compromised JavaScript library was found to be injecting the cryptojacking scripts. The malicious code remained on the site for at least four hours before it was removed~\cite{politifactcoinhive}. PolitiFact executive director stated ``Hackers were able to install their script on the fact-checking website after discovering a misconfigured cloud-computing server''~\cite{politifactcoinhivewsj}.
 
 
 \subsection{Man-in-the-middle} 
