--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -22,5 +22,5 @@
 \bigskip
 \rule{\linewidth}{1pt}%
 \end{minipage}%
-\caption{Timeline of Monero and in-browser mining.\label{tab:timeline}}
+\caption{Timeline of Monero and in-browser mining\label{tab:timeline}}
 \end{table}
